--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <html>
   Pet World
-  
+  <table>
+    <tr>
+    <td>
+      <a href="https://profeguedes.github.io/profeguedes_site1/servicos.html">Serviços</a>
+      </td>
+        </tr>  
+     <tr>
+    <td>
+      Localização
+      </td>
+        </tr>      
+     <tr>
+    <td>
+      Contato
+      </td>
+        </tr>  
+     <tr>
+    <td>
+      Sobre Nós
+      </td>
+        </tr>      
+  </table>
   
   
   
