--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
         </tr>  
      <tr>
     <td>
-      Localização
+            <a href="https://profeguedes.github.io/profeguedes_site1/loc.html">Localização</a>
       </td>
         </tr>      
      <tr>
     <td>
-      Contato
+                  <a href="https://profeguedes.github.io/profeguedes_site1/contato.html">Contato</a>
       </td>
         </tr>  
      <tr>
     <td>
-      Sobre Nós
+                  <a href="https://profeguedes.github.io/profeguedes_site1/sobre_nos.html">Sobre Nós</a>
       </td>
         </tr>      
   </table>
