--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   Pet World
-  <table>
+  <table border="0">
     <tr>
     <td>
       <a href="https://profeguedes.github.io/profeguedes_site1/servicos.html">Serviços</a>
