--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </tr>  
      <tr>
     <td>
-            <a href="https://profeguedes.github.io/profeguedes_site1/loc.html">Localização</a>
+            <a href="https://profeguedes.github.io/profeguedes_site1/loc.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_localizacao.png"></a>
       </td>
         </tr>      
      <tr>
