--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         </tr>      
      <tr>
     <td>
-                  <a href="https://profeguedes.github.io/profeguedes_site1/contato.html">Contato</a>
+                  <a href="https://profeguedes.github.io/profeguedes_site1/contato.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_contato.png"></a>
       </td>
         </tr>  
      <tr>
     <td>
-                  <a href="https://profeguedes.github.io/profeguedes_site1/sobre_nos.html">Sobre Nós</a>
+                  <a href="https://profeguedes.github.io/profeguedes_site1/sobre_nos.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_sobre_nos.png"></a>
       </td>
         </tr>      
   </table>
