--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <center><h1>Pet World</h1></center>
   <table border="1">
     <tr>
-    <td colspan="0" rowspan="0">
+    <td bordercolor="red">
       <a href="https://profeguedes.github.io/profeguedes_site1/servicos.html"> <img src="https://profeguedes.github.io/profeguedes_site1/Images/img_servicos.png"></a>
       </td>
         </tr>  
