--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<!DOCTYPE html>
 <html>
-  <center><h1>Pet World</h1></center>
+  <center><h5>Pet World</h5></center>
   <table border="1">
     <tr>
     <td bordercolor="red">
