--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <meta charset="UTF-8">
-  <title> Pet Word </title>
+  <title> Pet World </title>
   <center><h1>Pet World</h1></center>
   <table border="1">
     <tr>
