--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
   <meta charset="UTF-8">
   <title> Pet World </title>
-  <center><h1>Pet World</h1></center>
-  <table border="1">
-    <tr>
-    <td bordercolor="red">
+  </head>
+  
+  <body>
+    <center><h1>Pet World</h1></center>
+    <table border="1">
+      <tr>
+      <td bordercolor="red">
       <a href="https://profeguedes.github.io/profeguedes_site1/servicos.html"> <img src="https://profeguedes.github.io/profeguedes_site1/Images/img_servicos.png"></a>
       </td>
-        </tr>  
-     <tr>
-    <td>
-            <a href="https://profeguedes.github.io/profeguedes_site1/loc.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_localizacao.png"></a>
+      </tr>  
+      <tr>
+      <td>
+      <a href="https://profeguedes.github.io/profeguedes_site1/loc.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_localizacao.png"></a>
       </td>
-        </tr>      
-     <tr>
-    <td>
-                  <a href="https://profeguedes.github.io/profeguedes_site1/contato.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_contato.png"></a>
+      </tr>      
+      <tr>
+      <td>
+      <a href="https://profeguedes.github.io/profeguedes_site1/contato.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_contato.png"></a>
       </td>
-        </tr>  
-     <tr>
-    <td>
-                  <a href="https://profeguedes.github.io/profeguedes_site1/sobre_nos.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_sobre_nos.png"></a>
+      </tr>  
+      <tr>
+      <td>
+      <a href="https://profeguedes.github.io/profeguedes_site1/sobre_nos.html"><img src="https://profeguedes.github.io/profeguedes_site1/Images/img_sobre_nos.png"></a>
       </td>
-        </tr>      
-  </table>
-  
-  
-  
+      </tr>      
+      </table>
+  </body>
+   
 </html>
