--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
- Pet World 
-  
+ 
   <body>
     <center><h1>Pet World</h1></center>
     <table border="1" align="center">
       <tr>
       <td>
-      Serviços
+      <a href="https://profeguedes.github.io/profeguedes_site1/servicos.html">Serviços</a>
       </td>
       </tr>  
       <tr>
